# tabular-automl

./: .coveragerc  .deepsource.toml  .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish_docker_image.yml  publish_python_package.yml  pypi_release.yml  test.yml
.streamlit/: config.toml
automl/: settings.py  tabular.py
automl/tests/: test_tabular.py
tabular_automl/: __init__.py  automl.py  data.py  exceptions.py  settings.py  tabular_automl.py  tests.py
tabular_automl/tests/: test_automl.py  test_data.py
web_app/: app.py  settings.py
