[metadata]
name = harisonmg-automl
version = 0.0.1
author = Harison Gachuru
author_email = harisongachuru@gmail.com
description = Experimenting with Python AutoML libraries and frameworks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harisonmg/automl
project_urls =
    Bug Tracker = https://github.com/harisonmg/automl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = pycaret

[options.packages.find]
exclude = tests
