[metadata]
name = tabular-automl
version = 0.2.0
author = Harison Gachuru
author_email = harisongachuru@gmail.com
description = A low code, low-cost AutoML solution for tabular data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harisonmg/tabular-automl
project_urls =
    Bug Tracker = https://github.com/harisonmg/tabular-automl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    pycaret
    shap
    streamlit
